Cambié el cert3 por CEH

--- a/index.html
+++ b/index.html
@@ -551,20 +551,20 @@
                     <div
                         class="card flex flex-col overflow-hidden transform hover:-translate-y-2 transition-transform duration-300 backdrop-blur-sm border border-slate-800 rounded-xl p-6 shadow-lg">
                         <div class="flex-shrink-0">
-                            <a href="images/cert3_codecademy_comando.jpg" class="block mt-2">
-                                <img class="h-auto w-full object-cover" src="images/cert3_codecademy_comando.jpg"
-                                    alt="Imagen de diploma linea de comandos linux">
+                            <a href="images/cert3 Certified Ethical Hacking_page-0001.jpg" class="block mt-2">
+                                <img class="h-auto w-full object-cover" src="images/cert3 Certified Ethical Hacking_page-0001.jpg"
+                                    alt="Imagen de diploma Certified Ethical Hacking">
                             </a>
                         </div>
                         <div class="flex-1 p-6 flex flex-col justify-between">
                             <div class="flex-1">
                                 <p class="text-sm font-medium text-sky-400">
-                                    Codecademy
+                                    Coursera
                                 </p>
-                                <a href="images/cert3_codecademy_comando.jpg" class="block mt-2">
-                                    <p class="text-xl font-semibold text-white">Aprende la Línea de Comandos</p>
-                                    <p class="mt-3 text-base text-gray-400">Curso intensivo sobre el uso de la terminal
-                                        en entornos Unix/Linux, una habilidad esencial para cualquier desarrollador.</p>
+                                <a href="images/cert3 Certified Ethical Hacking_page-0001.jpg" class="block mt-2">
+                                    <p class="text-xl font-semibold text-white">CEH (v12)</p>
+                                    <p class="mt-3 text-base text-gray-400">Certificado en Ethical Hacking v12 con
+                                        experiencia en seguridad, pruebas y respuesta a incidentes.</p>
                                 </a>
                             </div>
                             <div class="mt-6 flex items-center">
@@ -675,9 +675,9 @@
                         class="card flex flex-col overflow-hidden transform hover:-translate-y-2 transition-transform duration-300 backdrop-blur-sm border border-slate-800 rounded-xl p-6 shadow-lg">
                         <div class="flex-shrink-0">
                             <a href="images/Cert6_Python intermedio UTN_page-0001.jpg" class="block mt-2">
-                            <img class="h-auto w-full object-cover"
-                                src="images/Cert6_Python intermedio UTN_page-0001.jpg"
-                                alt="Imagen de diploma Python 3"></a>
+                                <img class="h-auto w-full object-cover"
+                                    src="images/Cert6_Python intermedio UTN_page-0001.jpg"
+                                    alt="Imagen de diploma Python 3"></a>
                         </div>
                         <div class="flex-1 p-6 flex flex-col justify-between">
                             <div class="flex-1">
@@ -1176,8 +1176,7 @@
                     </div>
                     <!-- Book Card 4 -->
                     <div class="book-card bg-gray-800 rounded-lg overflow-hidden shadow-lg">
-                        <a href="https://a.co/d/8KSvB6X" target="_blank"><img
-                                src="images/004-la_biblia_negra_E_H.jpg"
+                        <a href="https://a.co/d/8KSvB6X" target="_blank"><img src="images/004-la_biblia_negra_E_H.jpg"
                                 alt="Portada del libro La bilbia negra" class="w-full h-auto object-cover"></a>
                         <div class="p-6">
                             <h4 class="font-bold text-white text-lg">La biblia negra del Ethical Hacking</h4>
@@ -1195,9 +1194,9 @@
                 <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-8">
                     <!-- Book Card 5 -->
                     <div class="book-card bg-gray-800 rounded-lg overflow-hidden shadow-lg">
-                        <a href="https://a.co/d/cE2ui9B" target="_blank"><img
-                                src="images/005-metasploit_al_desnudo.jpg"
-                                alt="Portada del libro 005-metasploit_al_desnudo" class="w-full h-auto object-cover"></a>
+                        <a href="https://a.co/d/cE2ui9B" target="_blank"><img src="images/005-metasploit_al_desnudo.jpg"
+                                alt="Portada del libro 005-metasploit_al_desnudo"
+                                class="w-full h-auto object-cover"></a>
                         <div class="p-6">
                             <h4 class="font-bold text-white text-lg">Metasploit al desnudo</h4>
                             <p class="text-sm text-gray-400 mt-1">Framework</p>
@@ -1215,10 +1214,8 @@
                     </div>
                     <!-- Book Card 7 -->
                     <div class="book-card bg-gray-800 rounded-lg overflow-hidden shadow-lg">
-                        <a href="https://a.co/d/gcPT6D1" target="_blank"><img
-                                src="images/007-hard_hatter.jpg"
-                                alt="Portada del libro 007-hard_hatter"
-                                class="w-full h-auto object-cover"></a>
+                        <a href="https://a.co/d/gcPT6D1" target="_blank"><img src="images/007-hard_hatter.jpg"
+                                alt="Portada del libro 007-hard_hatter" class="w-full h-auto object-cover"></a>
                         <div class="p-6">
                             <h4 class="font-bold text-white text-lg">Hard Hatter</h4>
                             <p class="text-sm text-gray-400 mt-1">Ethical Hacking - técnico</p>
@@ -1226,8 +1223,7 @@
                     </div>
                     <!-- Book Card 8 -->
                     <div class="book-card bg-gray-800 rounded-lg overflow-hidden shadow-lg">
-                        <a href="https://a.co/d/j8Slm3E" target="_blank"><img
-                                src="images/008-corre_suricata.jpg"
+                        <a href="https://a.co/d/j8Slm3E" target="_blank"><img src="images/008-corre_suricata.jpg"
                                 alt="Portada del libro 008-corre_suricata" class="w-full h-auto object-cover"></a>
                         <div class="p-6">
                             <h4 class="font-bold text-white text-lg">Corre Suricata</h4>
@@ -1245,8 +1241,7 @@
                 <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-8">
                     <!-- Book Card 9 -->
                     <div class="book-card bg-gray-800 rounded-lg overflow-hidden shadow-lg">
-                        <a href="https://a.co/d/env1MDM" target="_blank"><img
-                                src="images/009-la_biblia_de_NMAP.jpg"
+                        <a href="https://a.co/d/env1MDM" target="_blank"><img src="images/009-la_biblia_de_NMAP.jpg"
                                 alt="Portada del libro la_biblia_de_NMAP" class="w-full h-auto object-cover"></a>
                         <div class="p-6">
                             <h4 class="font-bold text-white text-lg">La biblia de NMAP</h4>
@@ -1255,8 +1250,7 @@
                     </div>
                     <!-- Book Card 10 -->
                     <div class="book-card bg-gray-800 rounded-lg overflow-hidden shadow-lg">
-                        <a href="https://a.co/d/ayT34a9" target="_blank"><img
-                                src="images/010-CEH_v13_entrenamiento.jpg"
+                        <a href="https://a.co/d/ayT34a9" target="_blank"><img src="images/010-CEH_v13_entrenamiento.jpg"
                                 alt="Portada del Libro CEH_v13_entrenamiento" class="w-full h-auto object-cover"></a>
                         <div class="p-6">
                             <h4 class="font-bold text-white text-lg">CEH.v13 Entrenamiento</h4>
@@ -1265,10 +1259,8 @@
                     </div>
                     <!-- Book Card 11 -->
                     <div class="book-card bg-gray-800 rounded-lg overflow-hidden shadow-lg">
-                        <a href="https://a.co/d/9VvKuqQ" target="_blank"><img
-                                src="images/011-NESSUS_a_full.jpg"
-                                alt="Portada del libro NESSUS_a_full"
-                                class="w-full h-auto object-cover"></a>
+                        <a href="https://a.co/d/9VvKuqQ" target="_blank"><img src="images/011-NESSUS_a_full.jpg"
+                                alt="Portada del libro NESSUS_a_full" class="w-full h-auto object-cover"></a>
                         <div class="p-6">
                             <h4 class="font-bold text-white text-lg">NESSUS a full</h4>
                             <p class="text-sm text-gray-400 mt-1">Curso</p>
@@ -1278,7 +1270,8 @@
                     <div class="book-card bg-gray-800 rounded-lg overflow-hidden shadow-lg">
                         <a href="https://a.co/d/azhmIOi" target="_blank"><img
                                 src="images/012-Guia_detallada_freelancers.jpg"
-                                alt="Portada del libro Guía detallada entrenar LLM" class="w-full h-auto object-cover"></a>
+                                alt="Portada del libro Guía detallada entrenar LLM"
+                                class="w-full h-auto object-cover"></a>
                         <div class="p-6">
                             <h4 class="font-bold text-white text-lg">Guía detallada entrenar LLM</h4>
                             <p class="text-sm text-gray-400 mt-1">Guía</p>
@@ -1296,7 +1289,8 @@
                     <div class="book-card bg-gray-800 rounded-lg overflow-hidden shadow-lg">
                         <a href="https://a.co/d/gakyobl" target="_blank"><img
                                 src="images/013-como_entender_la_mente.jpg"
-                                alt="Portada del libro Cómo entender la mente de un Hacker" class="w-full h-auto object-cover"></a>
+                                alt="Portada del libro Cómo entender la mente de un Hacker"
+                                class="w-full h-auto object-cover"></a>
                         <div class="p-6">
                             <h4 class="font-bold text-white text-lg">Cómo entender la mente de un Hacker</h4>
                             <p class="text-sm text-gray-400 mt-1">Libro de texto</p>
@@ -1325,9 +1319,9 @@
                     </div>
                     <!-- Book Card 16 -->
                     <div class="book-card bg-gray-800 rounded-lg overflow-hidden shadow-lg">
-                        <a href="https://a.co/d/1Kej4Ep" target="_blank"><img
-                                src="images/016-por_que_van_presos.jpg"
-                                alt="Portada del libro Por qué van presos los Hackers" class="w-full h-auto object-cover"></a>
+                        <a href="https://a.co/d/1Kej4Ep" target="_blank"><img src="images/016-por_que_van_presos.jpg"
+                                alt="Portada del libro Por qué van presos los Hackers"
+                                class="w-full h-auto object-cover"></a>
                         <div class="p-6">
                             <h4 class="font-bold text-white text-lg">Por qué van presos los Hackers</h4>
                             <p class="text-sm text-gray-400 mt-1">Manual/Guía</p>
