--- a/index.html
+++ b/index.html
@@ -563,7 +563,7 @@
                                 </p>
                                 <a href="images/cert3 Certified Ethical Hacking_page-0001.jpg" class="block mt-2">
                                     <p class="text-xl font-semibold text-white">CEH (v12)</p>
-                                    <p class="mt-3 text-base text-gray-400">Certificado en Ethical Hacking v12 con
+                                    <p class="mt-3 text-base text-gray-400">Certificado en Ethical Hacking (v12) con
                                         experiencia en seguridad, pruebas y respuesta a incidentes.</p>
                                 </a>
                             </div>
