Agregué CEH(v12) al path de cocimientos

--- a/index.html
+++ b/index.html
@@ -356,12 +356,12 @@
                                 <div class="md:w-1/2"></div>
                                 <div class="md:w-1/2">
                                     <div class="card md:text-right">
-                                        <p class="text-sky-400 font-semibold">2013 - 2024</p>
-                                        <h3 class="text-xl font-bold text-white mt-1">Analista Programador Universitario
+                                        <p class="text-sky-400 font-semibold">2025</p>
+                                        <h3 class="text-xl font-bold text-white mt-1">CEH(v12)
                                         </h3>
-                                        <p class="text-gray-400 font-medium">Universidad Nacional de José C. Paz</p>
-                                        <p class="text-gray-300 mt-3">Especializado en desarrollo web con backend en
-                                            Java. Programación orientada a objetos y bases de datos SQL y NoSQL.</p>
+                                        <p class="text-gray-400 font-medium">Coursera</p>
+                                        <p class="text-gray-300 mt-3">Demuestra dominio en hacking ético, seguridad de
+                                            redes, pruebas de penetración, detección y respuesta a incidentes.</p>
                                     </div>
                                 </div>
                             </div>
@@ -376,9 +376,29 @@
                                 <div class="md:w-1/2"></div>
                                 <div class="md:w-1/2">
                                     <div class="card">
+                                        <p class="text-sky-400 font-semibold">2013 - 2024</p>
+                                        <h3 class="text-xl font-bold text-white mt-1">Analista Programador Universitario
+                                        </h3>
+                                        <p class="text-gray-400 font-medium">Universidad Nacional de José C. Paz</p>
+                                        <p class="text-gray-300 mt-3">Especializado en desarrollo web con backend en
+                                            Java. Programación orientada a objetos y bases de datos SQL y NoSQL.</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div
+                                class="absolute left-1/2 -translate-x-1/2 w-6 h-6 bg-slate-700 border-4 border-slate-900 rounded-full">
+                            </div>
+                        </div>
+
+                        <div class="relative">
+                            <div class="md:flex flex-row-reverse items-center md:space-x-reverse md:space-x-8">
+                                <div class="md:w-1/2"></div>
+                                <div class="md:w-1/2">
+                                    <div class="card md:text-right">
                                         <p class="text-sky-400 font-semibold">2023</p>
                                         <h3 class="text-xl font-bold text-white mt-1">Experto Universitario en Hacking
-                                            Ético (Ethical Hacking)</h3>
+                                            Ético (Ethical Hacking)
+                                        </h3>
                                         <p class="text-gray-400 font-medium">Centro de e-Learning UTN FRBA</p>
                                         <p class="text-gray-300 mt-3">Aprendizaje y profundización en metodologías de
                                             pentesting.</p>
@@ -552,7 +572,8 @@
                         class="card flex flex-col overflow-hidden transform hover:-translate-y-2 transition-transform duration-300 backdrop-blur-sm border border-slate-800 rounded-xl p-6 shadow-lg">
                         <div class="flex-shrink-0">
                             <a href="images/cert3 Certified Ethical Hacking_page-0001.jpg" class="block mt-2">
-                                <img class="h-auto w-full object-cover" src="images/cert3 Certified Ethical Hacking_page-0001.jpg"
+                                <img class="h-auto w-full object-cover"
+                                    src="images/cert3 Certified Ethical Hacking_page-0001.jpg"
                                     alt="Imagen de diploma Certified Ethical Hacking">
                             </a>
                         </div>
