soluciondo el counter

--- a/index.html
+++ b/index.html
@@ -1491,11 +1491,11 @@
 
     <script>
         // --- Mobile Menu Toggle ---
-        const mobileMenuButton = document.getElementById('mobile-menu-button');
-        const mobileMenu = document.getElementById('mobile-menu');
-        mobileMenuButton.addEventListener('click', () => {
-            mobileMenu.classList.toggle('hidden');
-        });
+        //const mobileMenuButton = document.getElementById('mobile-menu-button');
+        //const mobileMenu = document.getElementById('mobile-menu');
+        //mobileMenuButton.addEventListener('click', () => {
+        //    mobileMenu.classList.toggle('hidden');
+        //});
 
         // --- Portfolio Tabs Logic ---
         const videosTab = document.getElementById('videos-tab');
