--- a/index.html
+++ b/index.html
@@ -1466,8 +1466,8 @@
                     ¿Preguntas, comentarios?
                 </p>
                 <a href="https://www.instagram.com/alejandro.g.vera.escritor/"
-                    class="inline-block bg-slate-800 text-white font-bold py-3 px-6 rounded-lg hover:bg-slate-700 transition-colors">
-                    <i class="fas fa-envelope mr-2"></i> Instagram:@alejandro.g.vera.escritor
+                    class="inline-block bg-slate-800 text-white font-bold py-3 px-6 rounded-lg hover:bg-slate-700 transition-colors text-center break-words">
+                    <i class="fas fa-envelope mr-2"></i> Instagram: @alejandro.g.vera.escritor
                 </a>
                 <div class="flex justify-center space-x-6 mt-10">
                     <a href="https://github.com/AlexielArdilla"
