Solucioné lo de la navbar

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
     <!-- Header / Navbar -->
     <header class="fixed top-0 left-0 right-0 z-50 bg-black/30 backdrop-blur-lg border-b border-slate-800">
         <div class="container mx-auto px-6 py-3 flex justify-between items-center">
-            <a href="#" class="hidden md:inline-block text-xl font-bold text-white">Alejandro G Vera</a>
+            <a href="#" class="text-xl font-bold text-white">Alejandro G. Vera</a>
             <nav class="hidden md:flex items-center space-x-4">
                 <a href="#about" class="nav-link">Sobre mí</a>
                 <a href="#experience" class="nav-link">Trayectoria</a>
@@ -251,11 +251,11 @@
                 <a href="#books" class="nav-link">Books</a>
                 <a href="#contact" class="nav-link bg-sky-600 text-white hover:bg-sky-500 px-6">Contacto</a>
             </nav>
-           <!-- <button id="mobile-menu-button" class="md:hidden text-white">
+            <button id="mobile-menu-button" class="md:hidden text-white">
                 <i class="fas fa-bars fa-lg"></i>
-            </button> -->
+            </button>
         </div>
-        <!-- Mobile Menu 
+        <!-- Mobile Menu -->
         <div id="mobile-menu" class="hidden md:hidden bg-slate-900">
             <a href="#about" class="block py-2 px-4 text-sm hover:bg-slate-800">Sobre mí</a>
             <a href="#experience" class="block py-2 px-4 text-sm hover:bg-slate-800">Trayectoria</a>
@@ -265,7 +265,7 @@
             <a href="#pet-projects" class="block py-2 px-4 text-sm hover:bg-slate-800">Pet Projects</a>
             <a href="#books" class="block py-2 px-4 text-sm hover:bg-slate-800">Books</a>
             <a href="#contact" class="block py-2 px-4 text-sm hover:bg-slate-800">Contacto</a>
-        </div> -->
+        </div>
     </header>
 
     <main class="pt-20">
@@ -284,7 +284,7 @@
                     class="bg-sky-600 text-white font-bold py-3 px-8 rounded-full hover:bg-sky-500 transition-transform duration-300 inline-block hover:scale-105 text-center break-words">
                     Algunos videos de mis capacitaciones
                 </a>
-                
+
             </div>
         </section>
 
@@ -1466,7 +1466,7 @@
                     ¿Preguntas, comentarios?
                 </p>
                 <a href="https://www.instagram.com/alejandro.g.vera.escritor/"
-                    class="inline-block bg-slate-800 text-white font-bold py-3 px-6 rounded-lg hover:bg-slate-700 transition-colors text-center break-words">
+                    class="inline-block w-full max-w-xs break-words text-center bg-slate-800 text-white font-bold py-3 px-6 rounded-lg hover:bg-slate-700 transition-colors">
                     <i class="fas fa-envelope mr-2"></i> Instagram: @alejandro.g.vera.escritor
                 </a>
                 <div class="flex justify-center space-x-6 mt-10">
@@ -1491,11 +1491,20 @@
 
     <script>
         // --- Mobile Menu Toggle ---
-        //const mobileMenuButton = document.getElementById('mobile-menu-button');
-        //const mobileMenu = document.getElementById('mobile-menu');
-        //mobileMenuButton.addEventListener('click', () => {
-        //    mobileMenu.classList.toggle('hidden');
-        //});
+        const mobileMenuButton = document.getElementById('mobile-menu-button');
+        const mobileMenu = document.getElementById('mobile-menu');
+        mobileMenuButton.addEventListener('click', () => {
+            mobileMenu.classList.toggle('hidden');
+        });
+
+        // --- Cerrar el menú móvil al hacer click en un enlace ---
+        const mobileLinks = mobileMenu.querySelectorAll('a');
+        mobileLinks.forEach(link => {
+            link.addEventListener('click', () => {
+                mobileMenu.classList.add('hidden');
+            });
+        });
+
 
         // --- Portfolio Tabs Logic ---
         const videosTab = document.getElementById('videos-tab');
