--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
             <nav class="hidden md:flex items-center space-x-4">
                 <a href="#about" class="nav-link">Sobre mí</a>
                 <a href="#experience" class="nav-link">Trayectoria</a>
-                <a href="#cursos" class="nav-link">Cursos</a>
+                <a href="#cursos" class="nav-link">Cursos y diplomas</a>
                 <a href="#portfolio" class="nav-link">Videos/code</a>
                 <a href="#skills" class="nav-link">Habilidades</a>
                 <a href="#pet-projects" class="nav-link">Pet Projects</a>
@@ -259,7 +259,7 @@
         <div id="mobile-menu" class="hidden md:hidden bg-slate-900">
             <a href="#about" class="block py-2 px-4 text-sm hover:bg-slate-800">Sobre mí</a>
             <a href="#experience" class="block py-2 px-4 text-sm hover:bg-slate-800">Trayectoria</a>
-            <a href="#cursos" class="block py-2 px-4 text-sm hover:bg-slate-800">Cursos</a>
+            <a href="#cursos" class="block py-2 px-4 text-sm hover:bg-slate-800">Cursos y diplomas</a>
             <a href="#portfolio" class="block py-2 px-4 text-sm hover:bg-slate-800">Portafolio</a>
             <a href="#skills" class="block py-2 px-4 text-sm hover:bg-slate-800">Habilidades</a>
             <a href="#pet-projects" class="block py-2 px-4 text-sm hover:bg-slate-800">Pet Projects</a>
@@ -326,7 +326,8 @@
                 <h2 class="section-title" style="text-align: center;"><b>Mi Trayectoria</b></h2>
                 <div class="relative max-w-5xl mx-auto mt-12">
                     <!-- Timeline line -->
-                    <div class="absolute left-1/2 w-0.5 h-full bg-slate-700 -translate-x-1/2"></div>
+                    <div class="hidden md:block absolute left-1/2 w-0.5 h-full bg-slate-700 -translate-x-1/2"></div>
+
 
                     <!-- Timeline Items -->
                     <div class="space-y-12">
@@ -347,8 +348,9 @@
                                 </div>
                             </div>
                             <div
-                                class="absolute left-1/2 -translate-x-1/2 w-6 h-6 bg-slate-700 border-4 border-slate-900 rounded-full">
+                                class="hidden md:block absolute left-1/2 -translate-x-1/2 w-6 h-6 bg-slate-700 border-4 border-slate-900 rounded-full">
                             </div>
+
                         </div>
                         <!-- Experiencia Laboral -->
                         <div class="relative">
@@ -367,8 +369,9 @@
                                 </div>
                             </div>
                             <div
-                                class="absolute left-1/2 -translate-x-1/2 w-6 h-6 bg-slate-700 border-4 border-slate-900 rounded-full">
+                                class="hidden md:block absolute left-1/2 -translate-x-1/2 w-6 h-6 bg-slate-700 border-4 border-slate-900 rounded-full">
                             </div>
+
                         </div>
 
                         <!-- Educación -->
@@ -387,8 +390,9 @@
                                 </div>
                             </div>
                             <div
-                                class="absolute left-1/2 -translate-x-1/2 w-6 h-6 bg-slate-700 border-4 border-slate-900 rounded-full">
+                                class="hidden md:block absolute left-1/2 -translate-x-1/2 w-6 h-6 bg-slate-700 border-4 border-slate-900 rounded-full">
                             </div>
+
                         </div>
 
                         <!-- Cursos y Diplomas -->
@@ -407,8 +411,10 @@
                                 </div>
                             </div>
                             <div
-                                class="absolute left-1/2 -translate-x-1/2 w-6 h-6 bg-slate-700 border-4 border-slate-900 rounded-full">
+                                class="hidden md:block absolute left-1/2 -translate-x-1/2 w-6 h-6 bg-slate-700 border-4 border-slate-900 rounded-full">
                             </div>
+
+
                         </div>
 
                         <div class="relative">
@@ -427,8 +433,9 @@
                                 </div>
                             </div>
                             <div
-                                class="absolute left-1/2 -translate-x-1/2 w-6 h-6 bg-slate-700 border-4 border-slate-900 rounded-full">
+                                class="hidden md:block absolute left-1/2 -translate-x-1/2 w-6 h-6 bg-slate-700 border-4 border-slate-900 rounded-full">
                             </div>
+
                         </div>
 
                         <!-- Cursos y Diplomas -->
@@ -446,8 +453,9 @@
                                 </div>
                             </div>
                             <div
-                                class="absolute left-1/2 -translate-x-1/2 w-6 h-6 bg-slate-700 border-4 border-slate-900 rounded-full">
+                                class="hidden md:block absolute left-1/2 -translate-x-1/2 w-6 h-6 bg-slate-700 border-4 border-slate-900 rounded-full">
                             </div>
+
 
                             <!-- Educación -->
                             <div class="relative">
@@ -467,8 +475,9 @@
                                     </div>
                                 </div>
                                 <div
-                                    class="absolute left-1/2 -translate-x-1/2 w-6 h-6 bg-slate-700 border-4 border-slate-900 rounded-full">
+                                    class="hidden md:block absolute left-1/2 -translate-x-1/2 w-6 h-6 bg-slate-700 border-4 border-slate-900 rounded-full">
                                 </div>
+
                             </div>
 
                         </div>
